# rasp-pipico-3ddht

./: CMakeLists.txt  LICENSE  README.md
dht_3d/usb/: 3d_dht.c  CMakeLists.txt  hello_usb (v1.1-funciona em release).c  hello_usb (v1.2-funciona em release).c
